--- a/angular.json
+++ b/angular.json
@@ -42,8 +42,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "1MB",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -68,7 +68,9 @@
               "buildTarget": "palworld-api-client-docker:build:production"
             },
             "development": {
-              "buildTarget": "palworld-api-client-docker:build:development"
+              "buildTarget": "palworld-api-client-docker:build:development",
+              "host": "0.0.0.0",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
