--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
         image/svg+xml;
 
     server {
-        listen       8080;
+        listen       ${PORT};
         server_name  localhost;
 
         root /usr/share/nginx/html;
@@ -60,7 +60,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://192.168.1.3:8212/v1/api/;
+            proxy_pass http://${API_HOST}:${API_PORT}/v1/api/;
         }
 
         # Static Assets Caching
