--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -3,9 +3,9 @@ services:
     build:
       context: .
     environment:
-      API_HOST: palworld
-      API_PORT: 8212
-      API_PASSWORD: <api password>
       PORT: 8080
+      API_HOST: 192.168.1.3
+      API_PORT: 8212
+      API_PASSWORD: palworld
     ports:
       - 8080:8080
