--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -3,9 +3,9 @@ services:
     build:
       context: .
     environment:
-      PORT: 8080
+      # PORT: 8080
       API_HOST: 192.168.1.3
-      API_PORT: 8212
-      API_PASSWORD: palworld
+      # API_PORT: 8212
+      # API_PASSWORD: palworld
     ports:
       - 8080:8080
