Add filters and auto updates metrics and players

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "prettier.configPath": ".vscode/.prettierrc"
+  "prettier.configPath": ".vscode/.prettierrc",
+  "files.associations": {
+    "*.json": "jsonc"
+  }
 }
