--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v5
 
+      - name: Cache node modules
+        uses: actions/cache@v5
+        with:
+          path: node_modules
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -40,7 +45,6 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
@@ -48,17 +52,9 @@ jobs:
             ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker images
-        id: push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-      # - name: Generate artifact attestation
-      #   uses: actions/attest-build-provenance@v3
-      #   with:
-      #     subject-name: index.docker.io/nicolaspaillard/palworld-api-client-docker
-      #     subject-digest: ${{ steps.push.outputs.digest }}
-      #     push-to-registry: true
