--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,6 +30,8 @@ jobs:
         uses: actions/cache@v5
         with:
           path: node_modules
+          key: node_modules-${{hashFiles('package-lock.json')}}
+          restore-keys: node_modules-
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
