--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,13 +26,6 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v5
 
-      - name: Cache node modules
-        uses: actions/cache@v5
-        with:
-          path: node_modules
-          key: node_modules-${{hashFiles('package-lock.json')}}
-          restore-keys: node_modules-
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -53,10 +46,25 @@ jobs:
             nicolaspaillard/palworld-api-client-docker
             ghcr.io/${{ github.repository }}
 
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: node_modules-${{hashFiles('package-json.lock')}}
+          restore-keys: node_modules- # Take any latest cache if failed to find it for current yarn.lock
+
       - name: Build and push Docker images
+        id: push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      # - name: Generate artifact attestation
+      #   uses: actions/attest-build-provenance@v3
+      #   with:
+      #     subject-name: index.docker.io/nicolaspaillard/palworld-api-client-docker
+      #     subject-digest: ${{ steps.push.outputs.digest }}
+      #     push-to-registry: true
