--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,12 +46,12 @@ jobs:
             nicolaspaillard/palworld-api-client-docker
             ghcr.io/${{ github.repository }}
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: node_modules-${{hashFiles('package-json.lock')}}
-          restore-keys: node_modules- # Take any latest cache if failed to find it for current yarn.lock
+      # - name: Cache node modules
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: node_modules
+      #     key: node_modules-${{hashFiles('package-json.lock')}}
+      #     restore-keys: node_modules-
 
       - name: Build and push Docker images
         id: push
