--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,18 +40,12 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
+        id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
             nicolaspaillard/palworld-api-client-docker
             ghcr.io/${{ github.repository }}
-
-      # - name: Cache node modules
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: node_modules
-      #     key: node_modules-${{hashFiles('package-json.lock')}}
-      #     restore-keys: node_modules-
 
       - name: Build and push Docker images
         id: push
