--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -37,6 +37,8 @@ jobs:
           images: |
             nicolaspaillard/palworld-api-client-docker
             ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value=latest
 
       - name: Build and push Docker images
         id: push
